minor layout tweaks to fix overlapping content preventing hover

--- a/components/Layout/styles.module.scss
+++ b/components/Layout/styles.module.scss
@@ -2,6 +2,7 @@
 .nav_container {
   position: fixed;
   width: 100vw;
+  height: 0;
   display: grid;
   grid-template-columns: 1fr minmax(320px, 620px) 1fr;
 }
@@ -10,6 +11,7 @@
   position: absolute;
   display: grid;
   width: 100vw;
+  height: 0;
   grid-template-columns: 1fr minmax(320px, 620px) 1fr;
 }
 
